--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </nav>
 
     <header class="header-container">
-        <h1 class="header-title"> <b><u>Mahanadi Parisara</u></b></h1>
-        <h3 class="header-subtitle"><strong>Digital Marketing Specialist</strong></h3>
+        <h2 class="header-title"> <b> Namaste! <br/> I am Mahanadi Parisara </b> </h2>
+        <h3 class="header-subtitle"> <strong> A Digital Marketing Specialist </strong> </h3>
     </header>
 
     <main>
@@ -34,7 +34,7 @@
         </section>
 
         <section class="competencies">
-            <h3><u>Core Competencies:</u></h3>
+            <h3>Core Competencies:</h3>
             <ul>
                 <li><strong>Google Products Expertise:</strong> Google Ads, Analytics, and Tag Manager.</li>
                 <li><strong>Conversion Tracking:</strong> Implementing and troubleshooting tracking solutions.</li>
