--- a/contact-me.html
+++ b/contact-me.html
@@ -23,7 +23,7 @@
     </nav>
 
     <header class="header-container">
-        <h1 class="header-title"><strong><u>Let’s Connect!</u></strong></h1>
+        <h1 class="header-title"> <strong> Let’s Connect! </strong> </h1>
     </header>
 
     <main>
