--- a/Clients.html
+++ b/Clients.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Mahanadi Parisara, Digital Marketing Specialist.">
     <title>Contact Me | Mahanadi Parisara</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
-        rel="stylesheet">
+    <section class="Calendar">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+            rel="stylesheet">
+        </section>
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
@@ -21,7 +23,8 @@
     </nav>
 
     <header class="header-container">
-        <h1 class="header-title"> <b><u> Clients I have worked with </u></b></h1>
+        <h1 class="header-title"> <b> Clients & Collaboration </b> </h1>
+        <p> High-profile clients I've had the privilege to work with </p>
     </header>
 
     <main>
